samples/_failures_safe/1761150053_a58b4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2779f881.c: In function ‘main’:
./samples/SAFE/__tmp_2779f881.c:155:5: error: expected declaration or statement at end of input
  155 |     int source;
      |     ^~~
